# farmvibes-ai

./: .gitattributes  .gitignore  .ruff.toml  Makefile  NOTEBOOK_LIST.md  QUICKSTART.md  README.md  SUPPORT.md  WORKFLOW_LIST.md  farmvibes-ai.sh  genindex.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  pyrightconfig.json  pytest.ini  search.html  searchindex.js
.devcontainer/: devcontainer.json  post-create.sh
.github/: advanced-issue-labeler.yml
_sources/: index.md.txt
cli/: cli-functions.sh  cluster-functions.sh  cr-vars.sh  dependencies-functions.sh  vars.sh  (+2 more)
src/vibe_core/: MANIFEST.in  pyproject.toml  setup.py
src/vibe_core/tests/: test_register.py  test_stac_converter.py  test_type_serialization.py  test_utils.py
src/vibe_core/vibe_core/: __init__.py  admag_client.py  client.py  datamodel.py  farmvibes_ai_hello_world.py  file_downloader.py  file_utils.py  logconfig.py  monitor.py  uri.py  utils.py
src/vibe_core/vibe_core/cli/: azure_helper.py  constants.py  help_descriptions.py  helper.py  linuxosartifacts.py  local.py  logging.py  main.py  osartifacts.py  parsers.py  remote.py  windowsosartifacts.py  wrappers.py
src/vibe_core/vibe_core/data/: __init__.py  airbus.py  carbon.py  core_types.py  data_registry.py  farm.py  json_converter.py  products.py  rasters.py  sentinel.py  utils.py  weather.py
src/vibe_core/vibe_core/terraform/aks/: README.md  example-vars.tfvars  main.tf  variables.tf
src/vibe_core/vibe_core/terraform/aks/modules/infra/: azure_monitor.tf  cosmos.tf  data.tf  keyvault.tf  kubernetes.tf  outputs.tf  providers.tf  publicip.tf  random.tf  resourcegroup.tf  storage.tf  variables.tf  vnet.tf
src/vibe_core/vibe_core/terraform/aks/modules/kubernetes/: cert.tf  dapr.tf  init.tf  otel.tf  outputs.tf  persistentvolume.tf  providers.tf  rabbitmq.tf  redis.tf  variables.tf
src/vibe_core/vibe_core/terraform/aks/modules/rg/: providers.tf  random.tf  resourcegroup.tf  variables.tf
src/vibe_core/vibe_core/terraform/local/: main.tf  variables.tf
src/vibe_core/vibe_core/terraform/local/modules/kubernetes/: dapr.tf  jaeger.tf  otel.tf  outputs.tf  persistentvolume.tf  providers.tf  rabbitmq.tf  redis.tf  variables.tf
src/vibe_core/vibe_core/terraform/services/: cache.tf  dataops.tf  orchestrator.tf  providers.tf  restapi.tf  variables.tf  worker.tf
src/vibe_core/vibe_core/testing/: comparison.py
(+1172 files in other folders)
