[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
    "tests*",
]

[project]
name = "vibe-core"
version ="2023.05.18"
authors = [
    { name="Microsoft FarmVibes.AI Team", email="eywa-devs@microsoft.com" },
]
description = "FarmVibes.AI Geospatial Platform Package - vibe core package."
license = {text = "MIT"}
requires-python = ">=3.8,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
keywords = [
    "farmvibes-ai geospatial",
    "geospatial",
    "agriculture",
    "machine learning",
    "remote sensing",
    "satellite imagery",
]
dependencies = [
    "jsonschema~=4.6",
    "pydantic~=1.10.0",
    "strenum~=0.4.7",
    "shapely>=1.7.1",
    "requests>=2.27",
    "pystac~=1.6.0",
    "hydra-zen~=0.10",
    "rich~=12.5.1",
    "msal==1.22.0",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/farmvibes-ai"
"Bug Tracker" = "https://github.com/microsoft/farmvibes-ai/issues"

[project.scripts]
farmvibes-ai = "vibe_core.cli.main:main"
